almost all add8

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -175,6 +175,22 @@
             }
         }
 
+        #invitationStaticBoxForJoin .modal-dialog {
+            position: absolute;
+            right: 0;
+            margin-right: 10px;
+            top: 50%;
+            transform: translateY(-50%);
+            max-width: calc(100% - 20px);
+        }
+
+
+        @media (min-width: 576px) {
+            #invitationStaticBoxForJoin .modal-dialog {
+                max-width: 450px;
+            }
+        }
+
         #postUrlForShare .modal-dialog {
             position: absolute;
           left: 30%;
