--- a/src/main/resources/templates/layout/group-post.html
+++ b/src/main/resources/templates/layout/group-post.html
@@ -198,7 +198,7 @@
                     <img id="communityImage" style="border-radius: 20px; margin-bottom: -3px;" src="/assets/img/pf-bg1.gif" width="300" height="200">
                     <div style="background-color: #9ec5ee; border-radius: 20px; margin-top: -100px;">
                         <div class="d-flex">
-                            <h1 id="communityName" class="text-white mx-1" style="font-weight: bold">Spider Man</h1>
+                            <h1 id="communityName" class="text-white mx-1" style="font-weight: bold"> </h1>
                             <i id="infoOfTheCommunity" class="fa-solid fa-circle-info text-white fs-4 my-2" data-bs-toggle="offcanvas" data-bs-target="#communityDetailShower" aria-controls="communityDetailShower"></i>
                            <!-- <i class="fa-solid fa-message text-white fs-4 my-2" id="messageJoinBtn" style="cursor: pointer;display: none ;margin-left: 10px;"></i>-->
                         </div>
@@ -209,7 +209,7 @@
                                 <p id="numOfMembers" class="font-monospace text-white fs-5 mx-2"></p>
                             </div>
                         </div>
-                       <div style="display: flex; justify-content: flex-end;">
+                       <div style="display: flex; justify-content: flex-end; margin-top: -25px;">
                         <div class="button-group d-flex"  >
                             <button type="button" class="btn btn-white btn-lg super-group-btns m-2 font-monospace" id="messageJoinBtn"  style="display: none" ><i class="fa-solid  fa-hand-paper"></i> Requests</button>
                             <button type="button" class="btn btn-white btn-lg super-group-btns m-2 font-monospace" id="chatMessageJoinIcon" value="JoinMessage" data-bs-toggle="modal" data-bs-target="#staticBackdropForJoinGroup" style="display: none" ><i class="fa-solid fa-user-gear"></i> Join</button>
