--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -318,6 +318,22 @@
             font-size: 24px;
             margin-right: 8px;
         }
+
+        .request-container {
+            position: relative;
+            display: inline-block;
+        }
+
+        .request-count {
+            position: absolute;
+            top: 0;
+            right: -4px;
+            background-color: #d74;
+            color: #fff;
+            padding: 2px 5px;
+            border-radius: 10px;
+            font-size: 12px;
+        }
     </style>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/css/intlTelInput.css" />
 </head>
