--- a/src/main/resources/templates/layout/group-post.html
+++ b/src/main/resources/templates/layout/group-post.html
@@ -216,7 +216,7 @@
                          src="/assets/img/pf-bg1.gif" width="300" height="200">
                     <div style="background-color: #9ec5ee; border-radius: 20px; margin-top: -100px;">
                         <div class="d-flex">
-                            <h1 id="communityName" class="text-white mx-1" style="font-weight: bold">Spider Man</h1>
+                            <h1 id="communityName" class="text-white mx-1" style="font-weight: bold"></h1>
                             <i id="infoOfTheCommunity" class="fa-solid fa-circle-info text-white fs-4 my-2"
                                data-bs-toggle="offcanvas" data-bs-target="#communityDetailShower"
                                aria-controls="communityDetailShower"></i>
@@ -229,7 +229,7 @@
                                 <p id="numOfMembers" class="font-monospace text-white fs-5 mx-2"></p>
                             </div>
                         </div>
-                        <div style="display: flex; justify-content: flex-end;">
+                        <div style="display: flex; justify-content: flex-end; margin-top: -25px;">
                             <div class="button-group d-flex">
                                 <div class="request-container">
                                     <button type="button"
