--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -385,6 +385,15 @@
                     </a><!-- End Excel Icon -->
                 </li>
                 <li class="nav-item dropdown">
+                    <a class="nav-link nav-icon" href="#" data-bs-toggle="modal" data-bs-target="#uploadtTimeInterval"
+                       sec:authorize="hasAnyAuthority('ADMIN')">
+                        <i class="bi bi-file-earmark-spreadsheet"></i>
+                    </a><!-- End Excel Icon -->
+                </li>
+
+
+
+                <li class="nav-item dropdown">
 
                     <a class="nav-link nav-icon" href="#" data-bs-toggle="dropdown" id="notiCountDecrease">
                         <i class="bi bi-bell"></i>
@@ -989,6 +998,29 @@
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
                         <button type="button" class="btn btn-primary" data-bs-dismiss="modal" id="uploadButton">Upload</button>
+                    </div>
+                </div>
+                <script src="/static/assets/js/excelUpload.js"></script>
+            </div>
+        </div>
+        <div class="modal fade" id="uploadtTimeInterval" tabindex="-1" aria-labelledby="uploadExcelModalLabel" aria-hidden="true" data-bs-backdrop="static" data-bs-keyboard="false">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="uploadTimeIntervalLabel">Upload Excel File</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" style="color: white"></button>
+                    </div>
+                    <div class="modal-body">
+                        <form id="intervalForm">
+                            <label for="hours">Set upload interval (hours):</label>
+                            <input type="number" id="hours" name="hours" min="0">
+                            <label for="minutes">Set upload interval (minutes):</label>
+                            <input type="number" id="minutes" name="minutes" min="0">
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                        <button type="button" class="btn btn-primary" data-bs-dismiss="modal" id="setIntervalButton" >Set Interval</button>
                     </div>
                 </div>
                 <script src="/static/assets/js/excelUpload.js"></script>
